Fin/Add comments

--- a/home.html
+++ b/home.html
@@ -1,3 +1,11 @@
+<!--
+JS-3 Assignment
+Author: Zane Stearman
+Date: 04/17/2019
+File: home.html
+-->
+
+
 <!doctype html>
 <html lang="en">
 <head>
